added get_urls() to what will be functionality in docviews

--- a/views.ipynb
+++ b/views.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:ed62e45af03df950250067d3603f3a8daf43125456d6217c6c7b2221255ffeb3"
+  "signature": "sha256:f946c0a8c2a73d2c73a56613f1429d601d8a1b3306c8df3e334cb697b1b0e536"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -20,30 +20,44 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def get_api(language, subsection_url=None):\n",
+      "def get_api(language, branch_url=None):\n",
       "    ''' Return all the info needed to dynamically generate an API page\n",
       "    '''\n",
       "    ## load language-specefic reference\n",
       "    ref_file = os.path.join(ref_dir, \"{}.json\".format(language))\n",
       "    with open(ref_file) as f:\n",
       "        reference = json.load(f)\n",
-      "    if subsection_url:\n",
-      "        subsection = None\n",
-      "        for sub in reference['subsections']:\n",
-      "            for sub_sub in sub['subsections']:\n",
-      "                if sub_sub['relative_url'] == subsection_url:\n",
-      "                    subsection = sub_sub\n",
-      "        if subsection:\n",
-      "            examples = subsection.pop('subsections')\n",
-      "            return subsection, examples\n",
+      "    if branch_url:\n",
+      "        return_branch = None\n",
+      "        for branch in reference['branches']:\n",
+      "            for sub_branch in branch['branches']:\n",
+      "                if sub_branch['relative_url'] == branch_url:\n",
+      "                    return_branch = sub_branch\n",
+      "        if return_branch:\n",
+      "            examples = return_branch.pop('branches')\n",
+      "            return return_branch, examples\n",
       "    else:\n",
-      "        return reference['subsections']"
+      "        return reference['branches']\n",
+      "\n",
+      "def get_urls():\n",
+      "    urls = set()\n",
+      "    for ref_file in os.listdir(ref_dir):\n",
+      "        language, ext = os.path.splitext(ref_file)\n",
+      "        with open(os.path.join(ref_dir, ref_file)) as f:\n",
+      "            reference = json.load(f)\n",
+      "        for branch in reference['branches']:\n",
+      "            if 'relative_url' in branch:\n",
+      "                path = [language, branch['relative_url']]\n",
+      "                urls.add('/'.join(part.strip('/') for part in path))\n",
+      "    url_list = list(urls)\n",
+      "    url_list.sort()\n",
+      "    return list(urls)"
      ],
      "language": "python",
      "metadata": {},
