get_urls() function now accepts a list of languages.

--- a/views.ipynb
+++ b/views.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:28361029d61b88586faf90475b077b064633a09a6289c88ff1dd4bc9050f6f32"
+  "signature": "sha256:5972b21212a69b9920ae98d4d7699f7f6de8fa48f09ee348b5d7e239c8e7bbea"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -45,17 +45,20 @@
       "    else:\n",
       "        return reference['branches']\n",
       "\n",
-      "def get_urls():\n",
+      "def get_urls(languages):\n",
       "    urls = set()\n",
-      "    for ref_file in os.listdir(ref_dir):\n",
-      "        language, ext = os.path.splitext(ref_file)\n",
-      "        with open(os.path.join(ref_dir, ref_file)) as f:\n",
-      "            reference = json.load(f)\n",
-      "        for branch in reference['branches']: # 'chart-types', 'layout', etc...\n",
-      "            for sub_branch in branch['branches']: # e.g.: area, histogram, etc.\n",
-      "                if 'relative_url' in sub_branch:\n",
-      "                    path = [language, sub_branch['relative_url']]\n",
-      "                    urls.add('/'.join(part.strip('/') for part in path))\n",
+      "    for language in languages:\n",
+      "        ref_file = os.path.join(ref_dir, \"{}.json\".format(language))\n",
+      "        try:\n",
+      "            with open(ref_file) as f:\n",
+      "                reference = json.load(f)\n",
+      "            for branch in reference['branches']: # 'chart-types', 'layout', etc...\n",
+      "                for sub_branch in branch['branches']: # e.g.: area, histogram, etc.\n",
+      "                    if 'relative_url' in sub_branch:\n",
+      "                        path = [language, sub_branch['relative_url']]\n",
+      "                        urls.add('/'.join(part.strip('/') for part in path))\n",
+      "        except:\n",
+      "            pass\n",
       "    url_list = list(urls)\n",
       "    url_list.sort()\n",
       "    return url_list"
@@ -2162,7 +2165,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "get_urls()"
+      "get_urls(['python'])"
      ],
      "language": "python",
      "metadata": {},
@@ -2172,15 +2175,56 @@
        "output_type": "pyout",
        "prompt_number": 10,
        "text": [
-        "[u'ggplot2/bar-chart',\n",
-        " u'ggplot2/embedding-plotly-graphs-in-HTML',\n",
-        " u'ggplot2/functions',\n",
-        " u'ggplot2/geom_polygon',\n",
-        " u'ggplot2/line-and-scatter',\n",
-        " u'ggplot2/line-shapes',\n",
-        " u'ggplot2/maps',\n",
-        " u'ggplot2/themes',\n",
-        " u'julia/2D-Histogram',\n",
+        "[u'python/2D-Histogram',\n",
+        " u'python/LaTeX',\n",
+        " u'python/axes',\n",
+        " u'python/bar-chart',\n",
+        " u'python/box-plot',\n",
+        " u'python/bubble-charts',\n",
+        " u'python/contour-plots',\n",
+        " u'python/embedding-plotly-graphs-in-HTML',\n",
+        " u'python/error-bars',\n",
+        " u'python/file-options',\n",
+        " u'python/filled-area-plots',\n",
+        " u'python/font',\n",
+        " u'python/get-requests',\n",
+        " u'python/graphing-multiple-chart-types',\n",
+        " u'python/heatmap',\n",
+        " u'python/histogram',\n",
+        " u'python/insets',\n",
+        " u'python/labels',\n",
+        " u'python/legend',\n",
+        " u'python/line-and-scatter',\n",
+        " u'python/log-plot',\n",
+        " u'python/multiple-axes',\n",
+        " u'python/polar-chart',\n",
+        " u'python/privacy',\n",
+        " u'python/setting-graph-figure-size',\n",
+        " u'python/static-image-export',\n",
+        " u'python/streaming',\n",
+        " u'python/subplot',\n",
+        " u'python/text-and-annotations',\n",
+        " u'python/time-series']"
+       ]
+      }
+     ],
+     "prompt_number": 10
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "get_urls(['python', 'nodejs', 'julia', 'matlab'])"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 11,
+       "text": [
+        "[u'julia/2D-Histogram',\n",
         " u'julia/LaTeX',\n",
         " u'julia/axes',\n",
         " u'julia/bar-chart',\n",
@@ -2242,16 +2286,6 @@
         " u'matlab/subplot',\n",
         " u'matlab/text-and-annotations',\n",
         " u'matlab/time-series',\n",
-        " u'matplotlib/bar-chart',\n",
-        " u'matplotlib/embedding-plotly-graphs-in-HTML',\n",
-        " u'matplotlib/fft',\n",
-        " u'matplotlib/filled-area-plots',\n",
-        " u'matplotlib/histogram',\n",
-        " u'matplotlib/line-and-scatter',\n",
-        " u'matplotlib/plot',\n",
-        " u'matplotlib/scatter',\n",
-        " u'matplotlib/subplot',\n",
-        " u'matplotlib/text-and-annotations',\n",
         " u'nodejs/2D-Histogram',\n",
         " u'nodejs/LaTeX',\n",
         " u'nodejs/axes',\n",
@@ -2310,39 +2344,11 @@
         " u'python/streaming',\n",
         " u'python/subplot',\n",
         " u'python/text-and-annotations',\n",
-        " u'python/time-series',\n",
-        " u'r/2D-Histogram',\n",
-        " u'r/LaTeX',\n",
-        " u'r/axes',\n",
-        " u'r/bar-chart',\n",
-        " u'r/box-plot',\n",
-        " u'r/bubble-charts',\n",
-        " u'r/contour-plots',\n",
-        " u'r/embedding-plotly-graphs-in-HTML',\n",
-        " u'r/error-bars',\n",
-        " u'r/file-options',\n",
-        " u'r/filled-area-plots',\n",
-        " u'r/font',\n",
-        " u'r/get-requests',\n",
-        " u'r/graphing-multiple-chart-types',\n",
-        " u'r/heatmap',\n",
-        " u'r/histogram',\n",
-        " u'r/insets',\n",
-        " u'r/labels',\n",
-        " u'r/legend',\n",
-        " u'r/line-and-scatter',\n",
-        " u'r/log-plot',\n",
-        " u'r/multiple-axes',\n",
-        " u'r/polar-chart',\n",
-        " u'r/privacy',\n",
-        " u'r/setting-graph-figure-size',\n",
-        " u'r/subplot',\n",
-        " u'r/text-and-annotations',\n",
-        " u'r/time-series']"
+        " u'python/time-series']"
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -2350,7 +2356,8 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 11
     }
    ],
    "metadata": {}
