More num_examples to num_categories changes
This is being done to match Carmel's changes on the pages branch
of streambed.

--- a/views.ipynb
+++ b/views.ipynb
@@ -126,7 +126,7 @@
         "       u'parent': u'line_and_scatter',\n",
         "       u'type': u'model',\n",
         "       u'url': u'https://plot.ly/~PlotBot/81'}],\n",
-        "     u'description': u'How to make line and scatter plots in {language}. {num_examples} examples of basic and colored line and scatter plots.',\n",
+        "     u'description': u'How to make line and scatter plots in {language}. {num_categories} examples of basic and colored line and scatter plots.',\n",
         "     u'has_thumbnail': True,\n",
         "     u'id': u'line_and_scatter',\n",
         "     u'name': u'Line and Scatter Plots',\n",
@@ -160,7 +160,7 @@
         "       u'parent': u'bar',\n",
         "       u'type': u'model',\n",
         "       u'url': u'https://plot.ly/~PlotBot/41'}],\n",
-        "     u'description': u'How to make a bar chart in {language}. {num_examples} examples of grouped, stacked, overlaid, and colored bar charts.',\n",
+        "     u'description': u'How to make a bar chart in {language}. {num_categories} examples of grouped, stacked, overlaid, and colored bar charts.',\n",
         "     u'has_thumbnail': True,\n",
         "     u'id': u'bar',\n",
         "     u'name': u'Bar Charts',\n",
@@ -187,7 +187,7 @@
         "       u'parent': u'box',\n",
         "       u'type': u'model',\n",
         "       u'url': u'https://plot.ly/~PlotBot/32'}],\n",
-        "     u'description': u'How to make a box plot in {language}. {num_examples} examples of box plots in {language} that are grouped, colored, and display the underlying data distribution.',\n",
+        "     u'description': u'How to make a box plot in {language}. {num_categories} examples of box plots in {language} that are grouped, colored, and display the underlying data distribution.',\n",
         "     u'has_thumbnail': True,\n",
         "     u'id': u'box',\n",
         "     u'name': u'Box Plots',\n",
@@ -220,7 +220,7 @@
         "       u'parent': u'contour',\n",
         "       u'type': u'model',\n",
         "       u'url': u'https://plot.ly/~PlotBot/95'}],\n",
-        "     u'description': u'How to make a contour plot in {language}. {num_examples} examples of contour plots of matrices with subplots, custom color-scales, and smoothing.',\n",
+        "     u'description': u'How to make a contour plot in {language}. {num_categories} examples of contour plots of matrices with subplots, custom color-scales, and smoothing.',\n",
         "     u'has_thumbnail': True,\n",
         "     u'id': u'contour',\n",
         "     u'name': u'Contour Plots',\n",
@@ -288,7 +288,7 @@
         "       u'parent': u'error-bar',\n",
         "       u'type': u'model',\n",
         "       u'url': u'https://plot.ly/~PlotBot/46'}],\n",
-        "     u'description': u'How to add error bars to a line, scatter, or bar chart. {num_examples} examples of symmetric, asymmetric, horizontal, and colored error bars.',\n",
+        "     u'description': u'How to add error bars to a line, scatter, or bar chart. {num_categories} examples of symmetric, asymmetric, horizontal, and colored error bars.',\n",
         "     u'has_thumbnail': True,\n",
         "     u'id': u'error-bar',\n",
         "     u'name': u'Error Bars',\n",
@@ -406,7 +406,7 @@
         "       u'parent': u'heatmap',\n",
         "       u'type': u'model',\n",
         "       u'url': u'https://plot.ly/~PlotBot/62'}],\n",
-        "     u'description': u'How to make a heatmap in {language} with a matrix. {num_examples} examples\\xa0of colored and labeled heatmaps with custom colorscales.',\n",
+        "     u'description': u'How to make a heatmap in {language} with a matrix. {num_categories} examples\\xa0of colored and labeled heatmaps with custom colorscales.',\n",
         "     u'has_thumbnail': True,\n",
         "     u'id': u'heatmap',\n",
         "     u'name': u'Heatmaps',\n",
@@ -447,7 +447,7 @@
         "       u'parent': u'histogram',\n",
         "       u'type': u'model',\n",
         "       u'url': u'https://plot.ly/~PlotBot/55'}],\n",
-        "     u'description': u'How to make a histogram in {language}. {num_examples} examples of colored, horizontal, and normal histogram bar charts.',\n",
+        "     u'description': u'How to make a histogram in {language}. {num_categories} examples of colored, horizontal, and normal histogram bar charts.',\n",
         "     u'has_thumbnail': True,\n",
         "     u'id': u'histogram',\n",
         "     u'name': u'Histograms',\n",
@@ -501,7 +501,7 @@
         "       u'parent': u'polar',\n",
         "       u'type': u'model',\n",
         "       u'url': u'https://plot.ly/~PlotBot/37'}],\n",
-        "     u'description': u'How to graph polar charts in {language}. {num_examples} examples of polar line, polar scatter and polar area charts.',\n",
+        "     u'description': u'How to graph polar charts in {language}. {num_categories} examples of polar line, polar scatter and polar area charts.',\n",
         "     u'has_thumbnail': True,\n",
         "     u'id': u'polar',\n",
         "     u'name': u'Polar Charts',\n",
@@ -633,7 +633,7 @@
         "       u'parent': u'subplots',\n",
         "       u'type': u'model',\n",
         "       u'url': u'https://plot.ly/~PlotBot/27'}],\n",
-        "     u'description': u'How to make subplots in {language}. {num_examples} examples of stacked, custom-sized, and gridded subplots.',\n",
+        "     u'description': u'How to make subplots in {language}. {num_categories} examples of stacked, custom-sized, and gridded subplots.',\n",
         "     u'has_thumbnail': True,\n",
         "     u'id': u'subplots',\n",
         "     u'name': u'Subplots',\n",
@@ -769,7 +769,7 @@
         "       u'parent': u'axes',\n",
         "       u'type': u'model',\n",
         "       u'url': u'https://plot.ly/~PlotBot/11'}],\n",
-        "     u'description': u'How to adjust axes properties in {language}. {num_examples} examples of linear and logarithmic axes, axes titles, and styling and coloring axes and grid lines.',\n",
+        "     u'description': u'How to adjust axes properties in {language}. {num_categories} examples of linear and logarithmic axes, axes titles, and styling and coloring axes and grid lines.',\n",
         "     u'has_thumbnail': False,\n",
         "     u'id': u'axes',\n",
         "     u'name': u'Axes',\n",
@@ -856,7 +856,7 @@
         "       u'parent': u'legends',\n",
         "       u'type': u'model',\n",
         "       u'url': u'https://plot.ly/~PlotBot/123'}],\n",
-        "     u'description': u'How to modify the legend in {language}\\xa0graphs. {num_examples} examples of how to move, color, and hide the legend.',\n",
+        "     u'description': u'How to modify the legend in {language}\\xa0graphs. {num_categories} examples of how to move, color, and hide the legend.',\n",
         "     u'has_thumbnail': False,\n",
         "     u'id': u'legends',\n",
         "     u'name': u'Legends',\n",
@@ -1044,7 +1044,7 @@
         "      u'parent': u'line_and_scatter',\n",
         "      u'type': u'model',\n",
         "      u'url': u'https://plot.ly/~PlotBot/81'}],\n",
-        "    u'description': u'How to make line and scatter plots in {language}. {num_examples} examples of basic and colored line and scatter plots.',\n",
+        "    u'description': u'How to make line and scatter plots in {language}. {num_categories} examples of basic and colored line and scatter plots.',\n",
         "    u'has_thumbnail': True,\n",
         "    u'id': u'line_and_scatter',\n",
         "    u'name': u'Line and Scatter Plots',\n",
@@ -1078,7 +1078,7 @@
         "      u'parent': u'bar',\n",
         "      u'type': u'model',\n",
         "      u'url': u'https://plot.ly/~PlotBot/41'}],\n",
-        "    u'description': u'How to make a bar chart in {language}. {num_examples} examples of grouped, stacked, overlaid, and colored bar charts.',\n",
+        "    u'description': u'How to make a bar chart in {language}. {num_categories} examples of grouped, stacked, overlaid, and colored bar charts.',\n",
         "    u'has_thumbnail': True,\n",
         "    u'id': u'bar',\n",
         "    u'name': u'Bar Charts',\n",
@@ -1105,7 +1105,7 @@
         "      u'parent': u'box',\n",
         "      u'type': u'model',\n",
         "      u'url': u'https://plot.ly/~PlotBot/32'}],\n",
-        "    u'description': u'How to make a box plot in {language}. {num_examples} examples of box plots in {language} that are grouped, colored, and display the underlying data distribution.',\n",
+        "    u'description': u'How to make a box plot in {language}. {num_categories} examples of box plots in {language} that are grouped, colored, and display the underlying data distribution.',\n",
         "    u'has_thumbnail': True,\n",
         "    u'id': u'box',\n",
         "    u'name': u'Box Plots',\n",
@@ -1138,7 +1138,7 @@
         "      u'parent': u'contour',\n",
         "      u'type': u'model',\n",
         "      u'url': u'https://plot.ly/~PlotBot/95'}],\n",
-        "    u'description': u'How to make a contour plot in {language}. {num_examples} examples of contour plots of matrices with subplots, custom color-scales, and smoothing.',\n",
+        "    u'description': u'How to make a contour plot in {language}. {num_categories} examples of contour plots of matrices with subplots, custom color-scales, and smoothing.',\n",
         "    u'has_thumbnail': True,\n",
         "    u'id': u'contour',\n",
         "    u'name': u'Contour Plots',\n",
@@ -1206,7 +1206,7 @@
         "      u'parent': u'error-bar',\n",
         "      u'type': u'model',\n",
         "      u'url': u'https://plot.ly/~PlotBot/46'}],\n",
-        "    u'description': u'How to add error bars to a line, scatter, or bar chart. {num_examples} examples of symmetric, asymmetric, horizontal, and colored error bars.',\n",
+        "    u'description': u'How to add error bars to a line, scatter, or bar chart. {num_categories} examples of symmetric, asymmetric, horizontal, and colored error bars.',\n",
         "    u'has_thumbnail': True,\n",
         "    u'id': u'error-bar',\n",
         "    u'name': u'Error Bars',\n",
@@ -1324,7 +1324,7 @@
         "      u'parent': u'heatmap',\n",
         "      u'type': u'model',\n",
         "      u'url': u'https://plot.ly/~PlotBot/62'}],\n",
-        "    u'description': u'How to make a heatmap in {language} with a matrix. {num_examples} examples\\xa0of colored and labeled heatmaps with custom colorscales.',\n",
+        "    u'description': u'How to make a heatmap in {language} with a matrix. {num_categories} examples\\xa0of colored and labeled heatmaps with custom colorscales.',\n",
         "    u'has_thumbnail': True,\n",
         "    u'id': u'heatmap',\n",
         "    u'name': u'Heatmaps',\n",
@@ -1365,7 +1365,7 @@
         "      u'parent': u'histogram',\n",
         "      u'type': u'model',\n",
         "      u'url': u'https://plot.ly/~PlotBot/55'}],\n",
-        "    u'description': u'How to make a histogram in {language}. {num_examples} examples of colored, horizontal, and normal histogram bar charts.',\n",
+        "    u'description': u'How to make a histogram in {language}. {num_categories} examples of colored, horizontal, and normal histogram bar charts.',\n",
         "    u'has_thumbnail': True,\n",
         "    u'id': u'histogram',\n",
         "    u'name': u'Histograms',\n",
@@ -1419,7 +1419,7 @@
         "      u'parent': u'polar',\n",
         "      u'type': u'model',\n",
         "      u'url': u'https://plot.ly/~PlotBot/37'}],\n",
-        "    u'description': u'How to graph polar charts in {language}. {num_examples} examples of polar line, polar scatter and polar area charts.',\n",
+        "    u'description': u'How to graph polar charts in {language}. {num_categories} examples of polar line, polar scatter and polar area charts.',\n",
         "    u'has_thumbnail': True,\n",
         "    u'id': u'polar',\n",
         "    u'name': u'Polar Charts',\n",
@@ -1551,7 +1551,7 @@
         "      u'parent': u'subplots',\n",
         "      u'type': u'model',\n",
         "      u'url': u'https://plot.ly/~PlotBot/27'}],\n",
-        "    u'description': u'How to make subplots in {language}. {num_examples} examples of stacked, custom-sized, and gridded subplots.',\n",
+        "    u'description': u'How to make subplots in {language}. {num_categories} examples of stacked, custom-sized, and gridded subplots.',\n",
         "    u'has_thumbnail': True,\n",
         "    u'id': u'subplots',\n",
         "    u'name': u'Subplots',\n",
@@ -1687,7 +1687,7 @@
         "      u'parent': u'axes',\n",
         "      u'type': u'model',\n",
         "      u'url': u'https://plot.ly/~PlotBot/11'}],\n",
-        "    u'description': u'How to adjust axes properties in {language}. {num_examples} examples of linear and logarithmic axes, axes titles, and styling and coloring axes and grid lines.',\n",
+        "    u'description': u'How to adjust axes properties in {language}. {num_categories} examples of linear and logarithmic axes, axes titles, and styling and coloring axes and grid lines.',\n",
         "    u'has_thumbnail': False,\n",
         "    u'id': u'axes',\n",
         "    u'name': u'Axes',\n",
@@ -1774,7 +1774,7 @@
         "      u'parent': u'legends',\n",
         "      u'type': u'model',\n",
         "      u'url': u'https://plot.ly/~PlotBot/123'}],\n",
-        "    u'description': u'How to modify the legend in {language}\\xa0graphs. {num_examples} examples of how to move, color, and hide the legend.',\n",
+        "    u'description': u'How to modify the legend in {language}\\xa0graphs. {num_categories} examples of how to move, color, and hide the legend.',\n",
         "    u'has_thumbnail': False,\n",
         "    u'id': u'legends',\n",
         "    u'name': u'Legends',\n",
@@ -1938,7 +1938,7 @@
        "output_type": "pyout",
        "prompt_number": 68,
        "text": [
-        "({u'description': u'How to make line and scatter plots in {language}. {num_examples} examples of basic and colored line and scatter plots.',\n",
+        "({u'description': u'How to make line and scatter plots in {language}. {num_categories} examples of basic and colored line and scatter plots.',\n",
         "  u'has_thumbnail': True,\n",
         "  u'id': u'line_and_scatter',\n",
         "  u'name': u'Line and Scatter Plots',\n",
