write about the version

--- a/_posts/user_guide_python/Plotly Offline.ipynb
+++ b/_posts/user_guide_python/Plotly Offline.ipynb
@@ -18,13 +18,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "from plotly.offline import download_plotlyjs, init_notebook_mode, iplot"
+    "! pip install plotly --upgrade"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.7.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "from plotly import __version__\n",
+    "from plotly.offline import download_plotlyjs, init_notebook_mode, iplot\n",
+    "\n",
+    "print __version__ # requires version >= 1.7.2"
    ]
   },
   {
