add sitemap: false to a few more pages

--- a/Crawl.ipynb
+++ b/Crawl.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -47,13 +47,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_posts/tutorials/block-diagram.svg\n",
+      "Traceback (most recent call last):\n",
+      "  File \"<ipython-input-3-de9718eb1c85>\", line 12, in <module>\n",
+      "    post = Post(full_fn)\n",
+      "  File \"<ipython-input-2-f555a6495329>\", line 6, in __init__\n",
+      "    front_matter_lines = [var for var in self.post_text.split('---')[1].split('\\n')[1:-1]]\n",
+      "IndexError: list index out of range\n",
+      "\n",
+      "_posts/tutorials/model-diagram.svg\n",
+      "Traceback (most recent call last):\n",
+      "  File \"<ipython-input-3-de9718eb1c85>\", line 12, in <module>\n",
+      "    post = Post(full_fn)\n",
+      "  File \"<ipython-input-2-f555a6495329>\", line 6, in __init__\n",
+      "    front_matter_lines = [var for var in self.post_text.split('---')[1].split('\\n')[1:-1]]\n",
+      "IndexError: list index out of range\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Add 'sitemap: false' to all of the _posts that aren't index files\n",
+    "# Add 'sitemap: false' to all of the _posts that don't have a permalink\n",
     "\n",
     "for root, dirs, filenames in os.walk('_posts'):\n",
     "    for fn in filenames:\n",
@@ -69,8 +92,9 @@
     "                print full_fn\n",
     "                print traceback.format_exc()\n",
     "            else:\n",
-    "                post.front_matter_vars = OrderedDict((k, v) for k, v in post.front_matter_vars.items() + [('sitemap', 'false')])\n",
-    "                post.write(full_fn)"
+    "                if 'permalink' not in post.front_matter_vars:\n",
+    "                    post.front_matter_vars = OrderedDict((k, v) for k, v in post.front_matter_vars.items() + [('sitemap', 'false')])\n",
+    "                    post.write(full_fn)"
    ]
   },
   {
