new build step with css for email reports

--- a/_posts/user_guide_python/email-reports.ipynb
+++ b/_posts/user_guide_python/email-reports.ipynb
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -330,27 +330,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting publisher\n",
-      "  Downloading publisher-0.6.tar.gz\n",
-      "Building wheels for collected packages: publisher\n",
-      "  Running setup.py bdist_wheel for publisher\n",
-      "  Stored in directory: /Users/chriddyp/Library/Caches/pip/wheels/06/ff/85/8264d6b83a4091ba09e90b926d58c79358ad326e3309db0f9b\n",
-      "Successfully built publisher\n",
-      "Installing collected packages: publisher\n",
-      "  Found existing installation: publisher 0.5\n",
-      "    Uninstalling publisher-0.5:\n",
-      "      Successfully uninstalled publisher-0.5\n",
-      "Successfully installed publisher-0.6\n"
+      "Requirement already up-to-date: publisher in /Users/chriddyp/Repos/venvpy27/lib/python2.7/site-packages\r\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/chriddyp/Repos/venvpy27/lib/python2.7/site-packages/publisher/publisher.py:50: UserWarning:\n",
-      "\n",
-      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "\n"
+      "/Users/chriddyp/Repos/venvpy27/lib/python2.7/site-packages/publisher/publisher.py:50: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
      ]
     }
    ],
