update notebook urls and css

--- a/_posts/tutorials/excel_python_and_plotly.ipynb
+++ b/_posts/tutorials/excel_python_and_plotly.ipynb
@@ -781,7 +781,7 @@
     "#Step 5 - Sharing your work and Collaborating with Others\n",
     "________________\n",
     "\n",
-    "One of the main reasons we wanted to use Plotly was the ability to share these interacitve visualizations via a URL. This makes it easy for our account managers to communicate the pricing plans with a simple email containging a link to the plot. \n",
+    "One of the main reasons we wanted to use Plotly was the ability to share these interacitve visualizations via a URL. This makes it easy for our account managers to communicate the pricing plans with a simple email containing a link to the plot. \n",
     "\n",
     "Plotly has built out some great functionality that makes sharing and collaborating really easy. When we have multiple analysts on a pricing build we can all work on a plot and once its done, its easy to share a private link with our partners."
    ]
@@ -817,18 +817,48 @@
    },
    "outputs": [
     {
+     "data": {
+      "text/html": [
+       "<link href=\"//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700\" rel=\"stylesheet\" type=\"text/css\" />"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<link rel=\"stylesheet\" type=\"text/css\" href=\"http://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css\">"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already up-to-date: publisher in /Users/chriddyp/Repos/venvpy27/lib/python2.7/site-packages/publisher-0.4-py2.7.egg\r\n"
+      "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
      ]
     }
    ],
    "source": [
+    "from IPython.display import display, HTML\n",
+    "\n",
+    "display(HTML('<link href=\"//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700\" rel=\"stylesheet\" type=\"text/css\" />'))\n",
+    "display(HTML('<link rel=\"stylesheet\" type=\"text/css\" href=\"http://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css\">'))\n",
+    "\n",
     "! pip install publisher --upgrade\n",
     "import publisher\n",
     "publisher.publish(\n",
-    "    'excel_python_and_plotly.ipynb', '/python/excel-python-and-plotly', 'Online Dashboards with Excel, Python, & Plotly', \n",
+    "    'excel_python_and_plotly.ipynb', '/ipython-notebooks/excel-python-and-plotly',\n",
+    "    'Online Dashboards with Excel, Python, & Plotly', \n",
     "    'This notebook is a primer on building interacitve web-based visualizations straight from an excel workbook with python, xlwings, pandas, and plotly')"
    ]
   },
