--- a/_posts/tutorials/ukelectionbbg.ipynb
+++ b/_posts/tutorials/ukelectionbbg.ipynb
@@ -820,10 +820,15 @@
     }
    ],
    "source": [
+    "from IPython.display import display, HTML\n",
+    "\n",
+    "display(HTML('<link href=\"//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700\" rel=\"stylesheet\" type=\"text/css\" />'))\n",
+    "display(HTML('<link rel=\"stylesheet\" type=\"text/css\" href=\"http://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css\">'))\n",
+    "\n",
     "! pip install publisher --upgrade\n",
     "import publisher\n",
     "publisher.publish(\n",
-    "    'ukelectionbbg.ipynb', '/python/ukelectionbbg', 'Plotting GBP/USD price action around UK general elections', \n",
+    "    'ukelectionbbg.ipynb', '/ipython-notebooks/ukelectionbbg', 'Plotting GBP/USD price action around UK general elections', \n",
     "    'Create interactive graphs with market data, IPython Notebook and Plotly')"
    ]
   },
