--- a/_posts/user_guide_python/pdf-reports.ipynb
+++ b/_posts/user_guide_python/pdf-reports.ipynb
@@ -94,7 +94,7 @@
     "\n",
     "def report_block_template(report_type, graph_url, caption=''):\n",
     "    if report_type == 'interactive':\n",
-    "        graph_block = '<iframe style=\"border: none;\" src=\"{graph_url}.embed\" width=\"100%\" height=\"600px\">'\n",
+    "        graph_block = '<iframe style=\"border: none;\" src=\"{graph_url}.embed\" width=\"100%\" height=\"600px\"></iframe>'\n",
     "    elif report_type == 'static':\n",
     "        graph_block = (''\n",
     "            '<a href=\"{graph_url}\" target=\"_blank\">' # Open the interactive graph when you click on the image\n",
@@ -144,7 +144,7 @@
     {
      "data": {
       "text/html": [
-       "<iframe style=\"border: none;\" src=\"https://plot.ly/~christopherp/308.embed\" width=\"100%\" height=\"600px\"><br><a href=\"https://plot.ly/~christopherp/308\" style=\"color: rgb(190,190,190); text-decoration: none; font-weight: 200;\" target=\"_blank\">Click to comment and see the interactive graph</a><br><hr><iframe style=\"border: none;\" src=\"https://plot.ly/~christopherp/306.embed\" width=\"100%\" height=\"600px\"><br><a href=\"https://plot.ly/~christopherp/306\" style=\"color: rgb(190,190,190); text-decoration: none; font-weight: 200;\" target=\"_blank\">Click to comment and see the interactive graph</a><br><hr><iframe style=\"border: none;\" src=\"https://plot.ly/~christopherp/300.embed\" width=\"100%\" height=\"600px\"><br><a href=\"https://plot.ly/~christopherp/300\" style=\"color: rgb(190,190,190); text-decoration: none; font-weight: 200;\" target=\"_blank\">Click to comment and see the interactive graph</a><br><hr><iframe style=\"border: none;\" src=\"https://plot.ly/~christopherp/296.embed\" width=\"100%\" height=\"600px\"><br><a href=\"https://plot.ly/~christopherp/296\" style=\"color: rgb(190,190,190); text-decoration: none; font-weight: 200;\" target=\"_blank\">Click to comment and see the interactive graph</a><br><hr>"
+       "<iframe style=\"border: none;\" src=\"https://plot.ly/~christopherp/308.embed\" width=\"100%\" height=\"600px\"></iframe><br><a href=\"https://plot.ly/~christopherp/308\" style=\"color: rgb(190,190,190); text-decoration: none; font-weight: 200;\" target=\"_blank\">Click to comment and see the interactive graph</a><br><hr><iframe style=\"border: none;\" src=\"https://plot.ly/~christopherp/306.embed\" width=\"100%\" height=\"600px\"></iframe><br><a href=\"https://plot.ly/~christopherp/306\" style=\"color: rgb(190,190,190); text-decoration: none; font-weight: 200;\" target=\"_blank\">Click to comment and see the interactive graph</a><br><hr><iframe style=\"border: none;\" src=\"https://plot.ly/~christopherp/300.embed\" width=\"100%\" height=\"600px\"></iframe><br><a href=\"https://plot.ly/~christopherp/300\" style=\"color: rgb(190,190,190); text-decoration: none; font-weight: 200;\" target=\"_blank\">Click to comment and see the interactive graph</a><br><hr><iframe style=\"border: none;\" src=\"https://plot.ly/~christopherp/296.embed\" width=\"100%\" height=\"600px\"></iframe><br><a href=\"https://plot.ly/~christopherp/296\" style=\"color: rgb(190,190,190); text-decoration: none; font-weight: 200;\" target=\"_blank\">Click to comment and see the interactive graph</a><br><hr>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -195,6 +195,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Looks good!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Part 2 - Convert the HTML to PDF with `xhtml2pdf`"
    ]
   },
@@ -222,19 +229,7 @@
     "    result_file.close()                 # close output file\n",
     "\n",
     "    # return True on success and False on errors\n",
-    "    return pisa_status.err\n",
-    "\n",
-    "# helper class to display PDFs in IPython notebooks\n",
-    "class PDF(object):\n",
-    "  def __init__(self, pdf, size=('100%',800)):\n",
-    "    self.pdf = pdf\n",
-    "    self.size = size\n",
-    "\n",
-    "  def _repr_html_(self):\n",
-    "    return '<iframe src={0} width={1[0]} height={1[1]}></iframe>'.format(self.pdf, self.size)\n",
-    "\n",
-    "  def _repr_latex_(self):\n",
-    "    return r'\\includegraphics[width=1.0\\textwidth]{{{0}}}'.format(self.pdf)"
+    "    return pisa_status.err"
    ]
   },
   {
@@ -248,7 +243,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:xhtml2pdf:Created temporary file /var/folders/d4/c4jpnb754pj3cfj5pv8y9m080000gn/T/tmpo_s1cy\n"
+      "WARNING:xhtml2pdf:Created temporary file /var/folders/d4/c4jpnb754pj3cfj5pv8y9m080000gn/T/tmpSlye2b\n"
      ]
     },
     {
@@ -268,34 +263,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<iframe src=report.pdf width=100% height=800></iframe>"
-      ],
-      "text/latex": [
-       "\\includegraphics[width=1.0\\textwidth]{report.pdf}"
-      ],
-      "text/plain": [
-       "<__main__.PDF at 0x10751e2d0>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "PDF('report.pdf')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {
     "collapsed": true
@@ -309,8 +276,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looks good!\n",
-    "\n",
     "The static report in the example above uses graphs that were already created in Plotly. Sometimes it's helpful to use graph images that are created on-the-fly. For example, if you're using [plotly.js](https://plot.ly/javascript-graphing-library) to create the web-reports you might not be saving the graphs to accounts on [plot.ly](https://plot.ly).\n",
     "\n",
     "To create static images of graphs on-the-fly, use the `plotly.plotly.image` class. This class generates images by making a request to the Plotly image server.\n",
